# GraphVIZPy

./: .gitignore  CLAUDE.md  DONE.md  GVP_settings.json  LICENSE  MainGraphvisPy.py  ORTHO_PORT_PLAN.md  README.md  TODO.md  TODO_core_refactor.md  TODO_dot_layout.md  TODO_dot_splines_port.md  TODO_layout_engines.md  TODO_main_gui.md  TODO_pictosync_merge.md  audit_focused.md  audit_report.md  audit_v55.md  dot.py  gvcli.py  gvtools.py  layout_save.json  license.txt  pyproject.toml  pytest.ini  requirements.txt  settings.py  test_data(bad).txt  world.gv
Docs/: CGraph.puml  CompoundNodesSubgraph.puml  D5_measurement_findings.md  Graph.puml  LargeCgraph.puml  OneCmpndOneSubgraph_TwoNodeMainGraph.puml  TopClass.puml  TwoCmpndOneSubgraph_OneNodeMainGraph.puml  TwoNodeCompoundNode.puml  declared_vs_referenced_proposal.md  dot-call-graph.xlsx  dotgen_components.puml
porting_scripts/: audit_c_refs.py  compare_expand.py  count_cluster_crossings.py  diff_phases.py  extract_cluster_init.py  extract_mincross.py  extract_phase3.py  extract_rank.py  extract_splines.py  run_all_dots.py  visual_audit.py
refactored/: Agobj.py  CGEdge.py  CGError.py  CGGrammar.py  CGGraph.py  CGNode.py  Defines.py  Headers.py  cgraph_mapped.py
test_data/: 1323.dot  1323_1.dot  1332_cluster_4117.dot  1332_cluster_4148.dot  1332_cluster_5376.dot  1332_ref.dot  1435.dot  1447.dot  1447_1.dot  1514.dot  1581.dot  1652.dot  1718.dot  1879.dot  1896.dot  2108.dot  2222.dot  2242.dot  2343.dot  2368_1.dot  2475_2.dot  2497.dot  2619_2.dot  2620.dot  2636.dot  2636_1.dot  2636_2.dot  2639.dot  2639.gvpr  (+49 more)
(+348 files in other folders)
